@@ -1,3 +1,9 @@
+2017-12-19 : IsoformSwitchAnalyzeR 1.1.01
+    - (The large version-bump is due to the release of the next itteration of Bioconductor)
+    - Corrections for a lot of spelling mistakes in the package - huge shoutout to @khoegenauer for the suggestions
+    - A few small updates to import functions making the progress even smoother
+    -
+
 2017-10-25 : IsoformSwitchAnalyzeR v0.99.15
     - Fixed a small mistake in the documentation causing build warnings
 
